fixed disappearing sidebar on mobile

--- a/assets/scss/_mi-moduls.scss
+++ b/assets/scss/_mi-moduls.scss
@@ -385,7 +385,7 @@ tbody th, tbody td {
 .position-left {
     top: 0;
     left: 0;
-    height: 100%;
+    height: 100vh;
     overflow-y: auto;
     width: 250px;
     -webkit-transform: translateX(-250px);
